# detours-cmake

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
dllsample/: CMakeLists.txt  dllsample.cpp  dummy.cpp  runwithdll.cpp  withdll.cpp
simple/: CMakeLists.txt  simple.cpp
