cmake_minimum_required(VERSION 3.8)

project(DetoursCMake)

if(MSVC)
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
else()
    add_link_options(-static -static-libgcc -static-libstdc++)
endif()

add_subdirectory(3rdparty)
add_subdirectory(simple)
add_subdirectory(dllsample)

# Set the destination folder for all binaries in bin/configuration/*
# Only applies to multi-config generators (e.g., Visual Studio)
if(CMAKE_CONFIGURATION_TYPES)
    # Core targets (all compilers)
    set(CORE_TARGETS simple dllsample dummy runwithdll withdll)
    # MSVC-only targets (use SEH)
    if(MSVC)
        list(APPEND CORE_TARGETS traceapi syelogd tracessl)
    endif()
    foreach(cfg IN LISTS CMAKE_CONFIGURATION_TYPES)
        string(TOUPPER ${cfg} cfg)
        foreach(trgt IN LISTS CORE_TARGETS)
            set_target_properties(${trgt} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${cfg} ${CMAKE_CURRENT_BINARY_DIR}/bin/${cfg})
        endforeach()
    endforeach()
endif()
